# event-extraction-oneie

./: ONEIE demo.ipynb  README.md  evaluate.py  predict.py  pyproject.toml  test_cc.py  train.py
config/: BERT-large-ACE-authors.json  train.json
input/: log.txt  result.dev.json  result.test.json
preprocessing/: check_zero_token_len.py  combine_valid_patterns.py  get_conflict_events.py  preprocess_ace.sh  preprocess_acepp.sh  preprocess_cc.py  preprocess_rams.sh  process_ace.py  process_dygiepp.py  process_ere.py
preprocessing/rams/: get_rams.sh  parse_rams_to_dygiepp.py  validate_parsed_data.py
resource/valid_patterns_acepp/: event_role.json  role_entity.json
resource/valid_patterns_rams/: event_role.json  role_entity.json
scripts/: change_valid_patterns.py  generate_valid_patterns.py  test_acepp.sh  test_cc.sh  train.sh
src/: config.py  data.py  graph.py  model.py  util.py
