[tool.poetry]
name = "src"
version = "0.1.0"
description = "Libraries required to run original ONEIE code."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "4.49.0"
nltk = "3.5"
lxml = "4.5.2"
transformers = "2.6.0"
torch = "1.6.0"
jsonlines = "^1.2.0"
pandas = "^1.1.2"
tensorboardX = "^2.1"
sentencepiece = "0.1.92"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"